--- a/World Bank.Rmd
+++ b/World Bank.Rmd
@@ -8,23 +8,26 @@ output: html_document
 
 #INTRODUCTION
 The World Bank is an international organization that aims to defeat poverty in the world (specifically in countries with low to medium income) through means of training, development and loan offerings to countries so that they may "help countries help themselves"[1]. Started in 1944 as an intiative after World War II to rebuild a torn Europe (where the International Bank for Reconstruction and Development was also started), the World Bank currently offers several financial products and services such as:
+
 <ul>
   <li>low interest loans</li>
   <li>low interest credits</li>
   <li>grants for developing countries</li>
   <li>financing through trust fund partnerships</li>
 </ul>
+
 The organization focuses on delivering measurable results and in order to do that it leads a powerful intiative for open development. This consists of free access to tools and data that spans over more than 50 years for several macroeconomic and microeconomic factors for countries from all over the globe.
 
 #OBJECTIVE(S)
 The world has seen some major shifts in the landscapes of politics, economy and society in the past 10 to 20 years. From the tragic events of September 11 in 2001 and the financial crysis of 2008 to the increasing gap in income equality and the rise of the internet as a universal digital medium, the world that has rebuilt after the second World War is anything if not a dynamic one. Such events change the world we know a little more every day. Social-economic interconnectedness (also known as economic globalization) has allowed for these changes to more easily scatter and disseminate all over the world so much so that it is now perfectly reasonable to expect a piece of news one night to result in protests being organized in several places around the world by the break of dawn the following day.<br><br>
 Forces of change such as the ones presented so far are, however, unexpected and hard to predict. If there is one force of world change that has been relatively consistent since the beginning of mankind it would have to be: population growth. Despite plagues and wars attacking the size of the population for humans living on Earth this is one indicator that has been fairly consistent in its upwards trend. Data from the Population Reference Bureau [2] has attempted to model an answer for the question "How many people have ever lived on Earth?" and started by mapping out the human population (as a best estimate) at a few checkpoint moments throghout human history:
 ```{r echo=FALSE}
-setwd("C:/Users/Ross DeWitt/Documents/GitHub/MA799_Project1/world_population")
-read.csv("./Data/popdata.csv")
+#setwd("C:/Users/Ross DeWitt/Documents/GitHub/MA799_Project1/world_population")
+#read.csv("./Data/popdata.csv")
 ```
-The overall goal of this paper is to analyze how population growth impacts other variables such as mortality rate, arable land, CO2 emissions, energy use, GDP growth, etc. or how it relates to any of these variables as well as possibly researching the evolution of such factors across several countries. It is safe to assume that not all countries are impacted by population growth in the same way but, if anything, this creates an opportunity for digging into a topic with a rather large scope and hopefully, interesting insights.<br>
-Other questions we could look to answer might include:
+The overall goal of this paper is to study population growth and analyze how this growth impacts other variables such as mortality rate, arable land, CO2 emissions, energy use, GDP growth, etc. or how it relates to any of these variables as well as possibly researching the evolution of such factors across several countries. It is safe to assume that not all countries are impacted by population growth in the same way but, if anything, this creates an opportunity for digging into a topic with a rather large scope and hopefully, interesting insights.<br>
+Other than studying population growth from different angles we could also look to answer questions that might include:
+
 <ul>
   <li>Can the growth in CO2 emissions be explained by population growth? If the information is analyzed per capita, does CO2 increase or decrease?</li>
   <li>How did farmland(as a percentage of land in each country) change over the years and what is the impact population growth has brought in this aspect?</li>
@@ -33,37 +36,144 @@ Other questions we could look to answer might include:
   <li>How does the population of 0 to 14 year olds vary against the population aged between 15 and 64?</li>
   <li>To what extent is mortality rate correlated with CO2 emissions or the use of renewable energy?</li>
 </ul>
+
 #DATASET DESCRIPTION
 As previously mentioned, The World Bank offers easy access to its publicly available data sets that contain information on a wide array of country indicators for each year where collection of that data was possible. These indicators cover different economic, political, geographical and social metrics that help paint a picture of countries all over the world. 
 
 Considering the aforementioned objectives and scope, for this report we have selected 15 indicators. These are:
 
-.    % Access sanitation facilities (1990 - 2015)
-.    % Agricultural land (1961 - 2013)
-.    % Population 0 to 14 years old (1960 - 2015)
-.    % Population 15 to 64 years old (1960 - 2015)
-.    % Rural population (1960 - 2015)
-.    % Urban population (1960 - 2015) 
-.    Population growth (1960 - 2015)
-.    Population total (1960 - 2015)
-.    % Renewable electricity output (1990 - 2012)
-.    CO2 emisions (1960 - 2011)
-.    Energy use
-.    GDP
-.    GDP annual growth
-.    Surface area
-.    Mortality rate
+* % Access sanitation facilities 
+* % Agricultural land 
+* % Population 0 to 14 years old 
+* % Population 15 to 64 years old 
+* % Rural population 
+* % Urban population 
+* Population growth 
+* Population total 
+* % Renewable electricity output 
+* CO2 emisions 
+* Energy use
+* GDP
+* GDP annual growth
+* Surface area
+* Mortality rate
 
 In order to work properly on the data, we have created a single data set using the following process:
-.    All tables have been merged into a single data set
-.    Years have been placed as a single variable called YEAR whose value is the year under review.
-.    VALUE variable contains the indicator value in the designated year (this way we can have different years' range for each variable)
-.    INDICADOR.CODE variable points out which indicator value in each line belongs with, while COUNTRY.CODE variable indicates the country 
-.    The missing values have been reduced, for this we have eliminated years if the country data was scarce.
+
+* All tables have been merged into a single data set
+* Years have been placed as a single variable called YEAR whose value is the year under review.
+* VALUE variable contains the indicator value in the designated year (this way we can have different years' range for each variable)
+* INDICADOR.CODE variable points out which indicator value in each line belongs with, while COUNTRY.CODE variable indicates the country 
+* The missing values have been reduced, for this we have eliminated years if the country data was scarce.
 
 In total, we have obtained a dataset with 40,200 rows, on which the respective analysis will be done.
 
 #DATASET PREPARATION
+
+To get the final data set we have created a script that does the following:
+
+* Reads the csv files of all the 15 indicators
+* Rename variables
+* Convert year into a column
+* Concatenate all 15 indicators into one data.frame
+* Check for missing values
+* Remove missing values (years and/or countries) to end up with a data.frame with no missing values
+
+Here is the code of the script:
+
+```{r, warning=FALSE,message=FALSE}
+# World Development Indicators:
+# This script loads csv downloaded from ://data.worldbank.org/topic
+# makes years as a feature and concatenates them together into one data.frame
+# then selects a good combination of years/countries without missing values
+
+# Load the WDI, readr and dplyr libraries
+library(WDI)
+library(readr)
+library(dplyr)
+library(tidyr)
+
+# Read each one of the indicators into a data frame from the downloaded CSV files
+setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
+san.df = read_csv("./data/%_access_sanitation_facilities_90_15.csv")
+ag.df = read_csv("./data/%_agricultural_land_61_13.csv")
+pop0.df = read_csv("./data/%_population_0_14_60_15.csv")
+pop15.df = read_csv("./data/%_population_15_64_60_15.csv")
+poprur.df= read_csv("./data/%_rural_population_60_15.csv")
+popur.df= read_csv("./data/%_urban_population_60_15.csv")
+co2.df= read_csv("./data/CO2_emisions_60_11.csv")
+kmsqr.df= read_csv("./data/km_square_61_15.csv")
+popgrowth.df= read_csv("./data/population_growth_60_15.csv")
+poptotal.df= read_csv("./data/population_total_60_15.csv")
+elecoutput.df= read_csv("./data/renew_elec_output_90_12.csv")
+mort5.df= read_csv("./data/mortality_less5_rate.csv")
+energy.df= read_csv("./data/energy_use_kg_oil.csv")
+gdp_growth.df= read_csv("./data/GDP_growth_annual%.csv")
+gdp.df= read_csv("./data/GDP.csv")
+
+# put all data.frames into a list
+all.list <- list(san.df,ag.df,pop0.df,pop15.df,poprur.df,popur.df,co2.df,kmsqr.df,
+                 popgrowth.df,poptotal.df,elecoutput.df,mort5.df,energy.df,
+                 gdp_growth.df,gdp.df)
+
+# Join all data.frames into a single data.frame wdi.df
+wdi.df = data.frame()
+# loop the list to set year and value as a column and concatenate
+for (aux.df in all.list){
+  # Rename variables
+  aux.df <- rename(aux.df, country.name = `Country Name`, country.code = `Country Code`,
+                   indicator.name = `Indicator Name`,indicator.code = `Indicator Code`)
+  # "Gather" the year variables and values into a pair of variables: `year` and `value`
+  aux.df <- gather(aux.df, year, value, -country.name, -country.code, -indicator.name, -indicator.code) 
+  #concatenates
+  wdi.df <- rbind(aux.df,wdi.df)
+}
+
+# Make the `indicator.code` variable into a factor
+wdi.df$indicator.code = factor(wdi.df$indicator.code)
+
+# Make the `country.code` variable into a factor
+wdi.df$country.code = factor(wdi.df$country.code)
+
+# Make the `year` variable into an ordered factor
+wdi.df$year = factor(wdi.df$year, ordered=TRUE)
+
+# check final data.frame
+str(wdi.df)
+```
+
+
+The second part of the script removes a set of years and countries in order to have a final data.frame with no missing values. After studying the data we crafted a final data.frame that has 134 countries and 20 years (1992 -2011). Note that we can modify this second part of script to get different final data.frames if needed.
+
+```{r, warning=FALSE,message=FALSE}
+# Remove column year=x61 and country.code=INX with 100% missing values
+wdi.df <- filter(wdi.df, year!="X61")
+wdi.df <- filter(wdi.df, country.code!="INX")
+
+# Create wdi.dfv2 20 years and 134 countries WITHOUT missing values
+wdi.dfv2 <- filter(wdi.df, year>1991& year<2012) 
+countries.mv <- wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
+  arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing))
+# Keep countries with 0% missing values
+country_keep = (filter(countries.mv, pct.missing == 0))$country.code
+wdi.dfv2 <- filter(wdi.dfv2, country.code %in% country_keep)
+
+# check % missing values for each year
+wdi.dfv2 %>%  group_by(year) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
+  arrange(year) %>%  select(year, pct.missing) %>%   print(n=100)
+# check % missing values for each country
+wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
+  arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing)) %>% print(n=250)
+
+# Save  final data.frame wdi.dfv2 as a csv file
+wdi.dfv2$country.code = factor(wdi.dfv2$country.code) #refactor
+wdi.dfv2$year = factor(wdi.dfv2$year, ordered=TRUE) #refactor
+write.csv(file=("./data/wdi.df.csv"), x=wdi.dfv2)
+# check structure of final data.frame
+str(wdi.dfv2)
+```
+
+
 ##References
 [1] Investopedia, http://www.investopedia.com/articles/03/042303.asp<br>
 [2] Population Reference Bureau, http://www.prb.org/Publications/Articles/2002/HowManyPeopleHaveEverLivedonEarth.aspx
