--- a/World Bank.Rmd
+++ b/World Bank.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "World Bank Data Analysis"
-author: "Constantin Rusu"
+author: "Constantin Rusu, Ignacio Carracedo, Nestor Gallo"
 date: "September 26, 2016"
 output: html_document
 ---
