--- a/World Bank.Rmd
+++ b/World Bank.Rmd
@@ -86,14 +86,17 @@ Here is the code of the script:
 # This script loads csv downloaded from ://data.worldbank.org/topic
 # makes years as a feature and concatenates them together into one data.frame
 # then selects a good combination of years/countries without missing values
-
-# Load the WDI, readr and dplyr libraries
+```
+First we load the WDI, readr and dplyr libraries:
+```
 library(WDI)
 library(readr)
 library(dplyr)
 library(tidyr)
+```
 
-# Read each one of the indicators into a data frame from the downloaded CSV files
+Next each one of the indicators are read into a data frame from the downloaded CSV files
+```
 setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
 san.df = read_csv("./data/%_access_sanitation_facilities_90_15.csv")
 ag.df = read_csv("./data/%_agricultural_land_61_13.csv")
@@ -110,66 +113,72 @@ mort5.df= read_csv("./data/mortality_less5_rate.csv")
 energy.df= read_csv("./data/energy_use_kg_oil.csv")
 gdp_growth.df= read_csv("./data/GDP_growth_annual%.csv")
 gdp.df= read_csv("./data/GDP.csv")
-
-# put all data.frames into a list
+```
+Next all data.frames are put into a list
+```
 all.list <- list(san.df,ag.df,pop0.df,pop15.df,poprur.df,popur.df,co2.df,kmsqr.df,
                  popgrowth.df,poptotal.df,elecoutput.df,mort5.df,energy.df,
                  gdp_growth.df,gdp.df)
+```
 
-# Join all data.frames into a single data.frame wdi.df
+All data.frames are put into a single data.frame called wdi.df
+```
 wdi.df = data.frame()
-# loop the list to set year and value as a column and concatenate
+```
+We then loop the list to set year and value as a column and concatenate them. Then rename the variables to the followng below:
+```
 for (aux.df in all.list){
-  # Rename variables
   aux.df <- rename(aux.df, country.name = `Country Name`, country.code = `Country Code`,
                    indicator.name = `Indicator Name`,indicator.code = `Indicator Code`)
-  # "Gather" the year variables and values into a pair of variables: `year` and `value`
+```
+"Gather" the year variables and values into a pair of variables: `year` and `value`
+```
   aux.df <- gather(aux.df, year, value, -country.name, -country.code, -indicator.name, -indicator.code) 
   #concatenates
   wdi.df <- rbind(aux.df,wdi.df)
 }
+```
 
-# Make the `indicator.code` variable into a factor
+Make the `indicator.code`, `country.code` variable into a factor and the `year` variable into an ordered factor:
+```
 wdi.df$indicator.code = factor(wdi.df$indicator.code)
-
-# Make the `country.code` variable into a factor
 wdi.df$country.code = factor(wdi.df$country.code)
-
-# Make the `year` variable into an ordered factor
 wdi.df$year = factor(wdi.df$year, ordered=TRUE)
+```
 
-# check final data.frame
+We check final data.frame
+```
 str(wdi.df)
 ```
 
 
 The second part of the script removes a set of years and countries in order to have a final data.frame with no missing values. After studying the data we crafted a final data.frame that has 134 countries and 20 years (1992 -2011). Note that we can modify this second part of script to get different final data.frames if needed.
 
+We remove column year=x61 and country.code=INX with 100% missing values
 ```{r, warning=FALSE,message=FALSE}
-# Remove column year=x61 and country.code=INX with 100% missing values
 wdi.df <- filter(wdi.df, year!="X61")
 wdi.df <- filter(wdi.df, country.code!="INX")
-
-# Create wdi.dfv2 20 years and 134 countries WITHOUT missing values
+```
+Next create wdi.dfv2 20 years and 134 countries without any missing values
+```
 wdi.dfv2 <- filter(wdi.df, year>1991& year<2012) 
 countries.mv <- wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
   arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing))
-# Keep countries with 0% missing values
+```
+We keep countries with 0% missing values and check for % missing values for each year and each country
+```
 country_keep = (filter(countries.mv, pct.missing == 0))$country.code
 wdi.dfv2 <- filter(wdi.dfv2, country.code %in% country_keep)
-
-# check % missing values for each year
 wdi.dfv2 %>%  group_by(year) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
   arrange(year) %>%  select(year, pct.missing) %>%   print(n=100)
-# check % missing values for each country
 wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
   arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing)) %>% print(n=250)
-
-# Save  final data.frame wdi.dfv2 as a csv file
+```
+We save the final data.frame wdi.dfv2 as a csv file and then check the structure
+```
 wdi.dfv2$country.code = factor(wdi.dfv2$country.code) #refactor
 wdi.dfv2$year = factor(wdi.dfv2$year, ordered=TRUE) #refactor
 write.csv(file=("./data/wdi.df.csv"), x=wdi.dfv2)
-# check structure of final data.frame
 str(wdi.dfv2)
 ```
 
