--- a/World Bank.Rmd
+++ b/World Bank.Rmd
@@ -22,8 +22,8 @@ The organization focuses on delivering measurable results and in order to do tha
 The world has seen some major shifts in the landscapes of politics, economy and society in the past 10 to 20 years. From the tragic events of September 11 in 2001 and the financial crysis of 2008 to the increasing gap in income equality and the rise of the internet as a universal digital medium, the world that has rebuilt after the second World War is anything if not a dynamic one. Such events change the world we know a little more every day. Social-economic interconnectedness (also known as economic globalization) has allowed for these changes to more easily scatter and disseminate all over the world so much so that it is now perfectly reasonable to expect a piece of news one night to result in protests being organized in several places around the world by the break of dawn the following day.<br><br>
 Forces of change such as the ones presented so far are, however, unexpected and hard to predict. If there is one force of world change that has been relatively consistent since the beginning of mankind it would have to be: population growth. Despite plagues and wars attacking the size of the population for humans living on Earth this is one indicator that has been fairly consistent in its upwards trend. Data from the Population Reference Bureau [2] has attempted to model an answer for the question "How many people have ever lived on Earth?" and started by mapping out the human population (as a best estimate) at a few checkpoint moments throghout human history:
 ```{r echo=FALSE}
-#setwd("C:/Users/Ross DeWitt/Documents/GitHub/MA799_Project1/world_population")
-#read.csv("./Data/popdata.csv")
+setwd("C:/Users/Nestor/Documents/MSBA/3 FALL 2016/MA402/Project/world_population-master")
+read.csv("./Data/popdata.csv")
 ```
 The goal of this paper is to study population growth and analyze how this growth impacts other variables such as mortality rate, arable land, CO2 emissions, energy use, GDP growth, etc. or how it relates to any of these variables as well as possibly researching the evolution of such factors across several countries. It is safe to assume that not all countries are impacted by population growth in the same way but, if anything, this creates an opportunity for digging into a topic with a rather large scope and hopefully, interesting insights.<br>
 Other than studying population growth from different angles we could also look to answer questions that might include:
@@ -42,21 +42,23 @@ As previously mentioned, The World Bank offers easy access to its publicly avail
 
 Considering the aforementioned objectives and scope, for this report we have selected 15 indicators. These are:
 
-* % Access sanitation facilities 
-* % Agricultural land 
-* % Population 0 to 14 years old 
-* % Population 15 to 64 years old 
-* % Rural population 
-* % Urban population 
-* Population growth 
-* Population total 
-* % Renewable electricity output 
-* CO2 emisions 
-* Energy use
-* GDP
-* GDP annual growth
-* Surface area
-* Mortality rate
+Indicator name      |  Description
+--------------------|-----------------------------------
+Agricultural land   | as a % of land area
+CO2 emision         | metric tons per capita
+Energy use          | kg of oil equivalent per capita
+GDP                 | current US$
+GDP growth          | annual %
+Improved sanitation facilities | % of population with access
+Mortality rate                 | under-5 (per 1,000 live births)
+Population ages 0-14           | % of total
+Population ages 15-64          | % of total
+Population growth              | annual %
+Population                     | total
+Renewable electricity output   | % of total electricity output
+Rural population               | % of total population
+Urban population               | % of total population
+Surface area                   | % of total
 
 We created a single data set using the following process:
 
@@ -79,6 +81,17 @@ To get the final data set we have created a script that does the following:
 * Check for missing values
 * Remove missing values (years and/or countries) to end up with a data.frame with no missing values
 
+#VARIABLE DESCRIPTION
+
+Variable Name | Variable Description
+--------------|---------------------
+country.name | Names of the 134 countries in the data set
+country.code | 3-letters code for every country
+indicator.name | Name of the 15 indicators 
+indicador.code | code with format XXX.XXX.XXX.XX 
+year | From 1992 to 2011
+value | of the indicator that year in that country
+
 Here is the code of the script:
 
 ```{r, warning=FALSE,message=FALSE}
@@ -88,7 +101,7 @@ Here is the code of the script:
 # then selects a good combination of years/countries without missing values
 ```
 First we load the WDI, readr and dplyr libraries:
-```
+```{r, warning=FALSE,message=FALSE}
 library(WDI)
 library(readr)
 library(dplyr)
@@ -96,8 +109,9 @@ library(tidyr)
 ```
 
 Next each one of the indicators are read into a data frame from the downloaded CSV files
-```
-setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
+```{r, warning=FALSE,message=FALSE}
+
+setwd("C:/Users/Nestor/Documents/MSBA/3 FALL 2016/MA402/Project/world_population-master")
 san.df = read_csv("./data/%_access_sanitation_facilities_90_15.csv")
 ag.df = read_csv("./data/%_agricultural_land_61_13.csv")
 pop0.df = read_csv("./data/%_population_0_14_60_15.csv")
@@ -115,39 +129,39 @@ gdp_growth.df= read_csv("./data/GDP_growth_annual%.csv")
 gdp.df= read_csv("./data/GDP.csv")
 ```
 Next all data.frames are put into a list
-```
+```{r, warning=FALSE,message=FALSE}
 all.list <- list(san.df,ag.df,pop0.df,pop15.df,poprur.df,popur.df,co2.df,kmsqr.df,
                  popgrowth.df,poptotal.df,elecoutput.df,mort5.df,energy.df,
                  gdp_growth.df,gdp.df)
 ```
 
 All data.frames are put into a single data.frame called wdi.df
-```
+```{r, warning=FALSE,message=FALSE}
 wdi.df = data.frame()
 ```
 We then loop the list to set year and value as a column and concatenate them. Then rename the variables to the followng below:
-```
+
+```{r, warning=FALSE,message=FALSE}
 for (aux.df in all.list){
-  aux.df <- rename(aux.df, country.name = `Country Name`, country.code = `Country Code`,
-                   indicator.name = `Indicator Name`,indicator.code = `Indicator Code`)
-```
-"Gather" the year variables and values into a pair of variables: `year` and `value`
-```
+  aux.df <- rename(aux.df, country.name = `Country Name`, country.code = `Country Code`, indicator.name = `Indicator Name`,indicator.code = `Indicator Code`)
   aux.df <- gather(aux.df, year, value, -country.name, -country.code, -indicator.name, -indicator.code) 
-  #concatenates
+
   wdi.df <- rbind(aux.df,wdi.df)
 }
+
 ```
 
 Make the `indicator.code`, `country.code` variable into a factor and the `year` variable into an ordered factor:
-```
+```{r, warning=FALSE,message=FALSE}
+
 wdi.df$indicator.code = factor(wdi.df$indicator.code)
 wdi.df$country.code = factor(wdi.df$country.code)
 wdi.df$year = factor(wdi.df$year, ordered=TRUE)
 ```
 
 We check final data.frame
-```
+```{r, warning=FALSE,message=FALSE}
+
 str(wdi.df)
 ```
 
@@ -160,13 +174,15 @@ wdi.df <- filter(wdi.df, year!="X61")
 wdi.df <- filter(wdi.df, country.code!="INX")
 ```
 Next create wdi.dfv2 20 years and 134 countries without any missing values
-```
+```{r, warning=FALSE,message=FALSE}
+
 wdi.dfv2 <- filter(wdi.df, year>1991& year<2012) 
 countries.mv <- wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
   arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing))
 ```
 We keep countries with 0% missing values and check for % missing values for each year and each country
-```
+```{r, warning=FALSE,message=FALSE}
+
 country_keep = (filter(countries.mv, pct.missing == 0))$country.code
 wdi.dfv2 <- filter(wdi.dfv2, country.code %in% country_keep)
 wdi.dfv2 %>%  group_by(year) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
@@ -175,7 +191,8 @@ wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(i
   arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing)) %>% print(n=250)
 ```
 We save the final data.frame wdi.dfv2 as a csv file and then check the structure
-```
+```{r, warning=FALSE,message=FALSE}
+
 wdi.dfv2$country.code = factor(wdi.dfv2$country.code) #refactor
 wdi.dfv2$year = factor(wdi.dfv2$year, ordered=TRUE) #refactor
 write.csv(file=("./data/wdi.df.csv"), x=wdi.dfv2)
@@ -217,7 +234,7 @@ str(wdi.dfv2)
 
 ```{r, echo=FALSE, warning=FALSE,message=FALSE}
 # Read dataframe of wdi.df and drop index column
-setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
+#setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
 wdi.df = read_csv("./data/wdi.df.csv")
 drops='X1'
 wdi.df = wdi.df[ , !(names(wdi.df) %in% drops)]
