--- a/World Bank.Rmd
+++ b/World Bank.Rmd
@@ -7,7 +7,7 @@ output: html_document
 <center><img src="http://youth4c.org/wp-content/uploads/2015/03/The-World-Bank-logo.png" width="500"></img></center><br>
 
 #INTRODUCTION
-The World Bank is an international organization that aims to defeat poverty in the world (specifically in countries with low to medium income) through means of training, development and loan offerings to countries so that they may "help countries help themselves"[1]. Started in 1944 as an intiative after World War II to rebuild a torn Europe (where the International Bank for Reconstruction and Development was also started), the World Bank currently offers several financial products and services such as:
+The World Bank is an international organization that aims to defeat poverty in the world (specifically in countries with low to medium income) through means of training, development and loan offerings to countries so that they may "help countries help themselves"[1]. Started in 1944 as an initiative after World War II to rebuild a torn Europe (where the International Bank for Reconstruction and Development was also started), the World Bank currently offers several financial products and services such as:
 
 <ul>
   <li>low interest loans</li>
@@ -16,19 +16,12 @@ The World Bank is an international organization that aims to defeat poverty in t
   <li>financing through trust fund partnerships</li>
 </ul>
 
-The organization focuses on delivering measurable results and in order to do that it leads a powerful intiative for open development. This consists of free access to tools and data that spans over more than 50 years for several macroeconomic and microeconomic factors for countries from all over the globe.
+The organization focuses on delivering measurable results and in order to do that it leads a powerful initiative for open development. This consists of free access to tools and data that spans over more than 50 years for several macroeconomic and microeconomic factors for countries from all over the globe.
 
 #OBJECTIVE(S)
-The world has seen some major shifts in the landscapes of politics, economy and society in the past 10 to 20 years. From the tragic events of September 11 in 2001 and the financial crysis of 2008 to the increasing gap in income equality and the rise of the internet as a universal digital medium, the world that has rebuilt after the second World War is anything if not a dynamic one. Social-economic interconnectedness (also known as economic globalization) has allowed for these changes to more easily scatter and disseminate all over the world so much so that it is now perfectly reasonable to expect a piece of news one night to result in protests being organized in several places around the world by the break of dawn the following day.<br><br>
-Forces of change such as the ones presented so far are, however, unexpected and hard to predict. However, if there is one force of world change that has been relatively consistent since the beginning of mankind it would have to be: population growth. Data from the Population Reference Bureau [2] has attempted to model an answer for the question "How many people have ever lived on Earth?" and started by mapping out the human population (as a best estimate) at a few checkpoint moments throghout human history as can be seen below. (the first column respresents the year, the second column represent the estimated population on Earth at that point in time, the third column represents the estimate number of births per one thousand people, the fourth column  represents the number of births between the current in-line year and the previous benchmark point)
-```{r echo=FALSE, warning=FALSE}
-library(WDI)
-library(readr)
-library(dplyr)
-library(tidyr)
-setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
-wdi.df = read_csv("./data/wdi.df.csv")
-```
+The world has seen some major shifts in the landscapes of politics, economy and society in the past 10 to 20 years. From the tragic events of September 11 in 2001 and the financial crisis of 2008 to the increasing gap in income equality and the rise of the internet as a universal digital medium, the world that has rebuilt after the second World War is anything if not a dynamic one. Social-economic interconnections (also known as economic globalization) has allowed for these changes to more easily scatter and disseminate all over the world so much so that it is now perfectly reasonable to expect a piece of news one night to result in protests being organized in several places around the world by the break of dawn the following day.<br><br>
+Forces of change such as the ones presented so far are, however, unexpected and hard to predict. However, if there is one force of world change that has been relatively consistent since the beginning of mankind it would have to be: population growth. Data from the Population Reference Bureau [2] has attempted to model an answer for the question "How many people have ever lived on Earth?" and started by mapping out the human population (as a best estimate) at a few checkpoint moments throughout human history as can be seen below. (the first column represents the year, the second column represent the estimated population on Earth at that point in time, the third column represents the estimate number of births per one thousand people, the fourth column  represents the number of births between the current in-line year and the previous benchmark point)
+
 What is clear from this table is that the population on Earth seems to be headed in an upwards direction and it therefore poses the question: With the certainty of human population growing, how has this impacted the world we live in?
 <br><br>The goal of this paper is to study population growth and analyze how this growth impacts other variables such as mortality rate, arable land, CO2 emissions, energy use, GDP growth, etc. as well as researching the evolution of such factors across several countries through time. It is safe to assume that not all countries are impacted by population growth in the same way but, if anything, this creates an opportunity for digging into an interesting topic and revealing insightful results.<br>
 Other than studying population growth we also look to answer questions that include:
@@ -37,7 +30,7 @@ Other than studying population growth we also look to answer questions that incl
   <li>Can the growth in CO2 emissions be explained by population growth? If the information is analyzed per capita among certain locations, how do these locations or areas differ in CO2 emissions? </li>
   <li>How did farmland (as a percentage of land in each country) change over the years and what is the impact population growth has brought in this aspect?</li>
   <li>What are the countries that present consistent negative GDP growth in the past years?</li>
-  <li>How does the population of 0 to 14 year olds vary against the population aged between 15 and 64? How do populations metrics shift and is there a noticeable trend?</li>
+  <li>How does the population of 0 to 14 year old vary against the population aged between 15 and 64? How do populations metrics shift and is there a noticeable trend?</li>
   <li>To what extent is mortality rate correlated with CO2 emissions or the use of renewable energy?</li>
 </ul>
 
@@ -46,14 +39,13 @@ As previously mentioned, The World Bank offers easy access to its publicly avail
 
 Considering the aforementioned objectives and scope, for this report we select 15 indicators. These are:
 
-* % Agricultural land 
 * % Population 0 to 14 years old 
 * % Population 15 to 64 years old 
 * % Rural population 
 * % Urban population 
 * Population growth 
 * Population total 
-* CO2 emisions 
+* CO2 emissions 
 * Energy use
 * GDP
 * GDP annual growth
@@ -64,21 +56,19 @@ We create a single data set using the following process:
 * Merge all variables of interest into a single dataset.
 * The missing values have been reduced, for this we have eliminated years if the country data was scarce.
 
-In total, we obtain a dataset with 40,200 rows, on which the analysis is done.
-
 #DATASET PREPARATION
 
-To get the final data set we create scripts that do the following:
+To get the final data set we create a script that does the following:
 
-* Reading the `CSV` files of all the 15 indicators
+* Reading the `CSV` files of all the 11 indicators
 * Renaming variables
 * Converting year into a column
-* Concatenating all 15 indicators into one `data.frame`
+* Concatenating all 11 indicators into one `data.frame` which make it easier to check missing values.
+* Selecting specific years and countries
 * Checking for missing values
-* Removing missing values (years and/or countries) to end up with a `data.frame` with no missing values
 
 First we load the WDI, readr and dplyr libraries:
-```{r, message=FALSE}
+```{r, message=FALSE, warning=FALSE}
 library(WDI)
 library(readr)
 library(dplyr)
@@ -90,9 +80,12 @@ The descriptions of these packages are as follows:<br>
 <li>`dplyr` - A Grammar of Data Manipulation. A fast, consistent tool for working with data frame like objects, both in memory and out of memory.</li>
 <li>`tidyr` - An evolution of 'reshape2'. It's designed specifically for data tidying (not general reshaping or aggregating) and works well with 'dplyr' data pipelines.</li>
 </ul>
-Next, each one of the indicators of interest are read into a data frame from the downloaded CSV files.
+Next, each one of the indicators of interest are read into its respective data frame from the downloaded CSV files.
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
-ag.df = read_csv("./data/%_agricultural_land_61_13.csv")
+# disable scientific notation. Easiear to read
+options(scipen=999)
+# Read each one fo the indicators into a data frame from the downloaded CSV files (remove manuall first 3 lines of cvs)
+setwd("C:/Users/carrai1/Desktop/Master/MA402_Data_Science/Assigment_1/")
 pop0.df = read_csv("./data/%_population_0_14_60_15.csv")
 pop15.df = read_csv("./data/%_population_15_64_60_15.csv")
 poprur.df= read_csv("./data/%_rural_population_60_15.csv")
@@ -105,122 +98,248 @@ energy.df= read_csv("./data/energy_use_kg_oil.csv")
 gdp_growth.df= read_csv("./data/GDP_growth_annual%.csv")
 gdp.df= read_csv("./data/GDP.csv")
 ```
-All data frames are now put into a list.
+
+
+we All data frames are now put into a list.
 ```{r}
 all.list <- list(pop0.df,pop15.df,poprur.df,popur.df,co2.df,kmsqr.df,
-                 popgrowth.df,poptotal.df,energy.df,
-                 gdp_growth.df,gdp.df)
+                 popgrowth.df,poptotal.df,energy.df,gdp_growth.df,gdp.df)
 ```
-All data frames are put into a single `data.frame` called `wdi.df`.
+we create a `data.frame` called `wdi.df`. Then we loop every indicator data frame and:
+
+* Rename columns
+* Use function `gather` to set `year` and `value` of the indicator into a column. This will facilitate exploring missing values.
+* Concatenate indicator data frame with `wdi.df`
+
+
 ```{r}
 wdi.df = data.frame()
-```
-We then loop the list to set year and value as a column, rename important variables and bind everything together.
-```{r, message=FALSE, results="hide"}
 for (aux.df in all.list){
   # Rename varibles
   aux.df <- rename(aux.df, country.name = `Country Name`, country.code = `Country Code`,indicator.name = `Indicator Name`,indicator.code = `Indicator Code`)
   # "Gather" the year variables and values into a pair of variables: `year` and `value`
   aux.df <- gather(aux.df, year, value, -country.name, -country.code, -indicator.name, -indicator.code) 
-  #Print number of rows to check
-  print(nrow(aux.df))
   #Concatenate
   wdi.df <- rbind(aux.df,wdi.df)
 }
 ```
-Convert the `indicator.code`, `country.code` variables into factors and the `year` variable into an ordered factor:
+
+Now we have a single data frame will all the indicators. We Convert the `indicator.code`, `country.code` variables into factors and the `year` variable into an ordered factor:
 ```{r}
 wdi.df$indicator.code = factor(wdi.df$indicator.code)
 wdi.df$country.code = factor(wdi.df$country.code)
 wdi.df$year = factor(wdi.df$year, ordered=TRUE)
 ```
-
-We check final data.frame.
-```{r}
-str(wdi.df)
-```
-The second part of the script removes a set of years and countries in order to have a final `data.frame` with no missing values. After studying the data we crafted a final `data.frame` that has 134 countries and 20 years (1992 -2011).<br><br>
-We remove column `year=x61` and `country.code=INX` with 100% missing values.
-```{r, warning=FALSE, message=FALSE}
+```{r, echo=FALSE,warning=FALSE, message=FALSE}
+# remove columns we don't need. No need to show this.
 wdi.df <- filter(wdi.df, year!="X61")
 wdi.df <- filter(wdi.df, country.code!="INX")
 ```
-Next, we transfer the data into a new data frame named 'wdi.dfv2` for 20 years and 134 countries without any missing values.
-```{r}
-wdi.dfv2 <- filter(wdi.df, year>1991& year<2012) 
-countries.mv <- wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
-  arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing))
-```
-We keep countries with 0% missing values and check for % missing values for each year and each country.
-```{r, results="hide"}
-country_keep = (filter(countries.mv, pct.missing == 0))$country.code
-wdi.dfv2 <- filter(wdi.dfv2, country.code %in% country_keep)
-wdi.dfv2 %>%  group_by(year) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
-  arrange(year) %>%  select(year, pct.missing) %>%   print(n=100)
-wdi.dfv2 %>%  group_by(country.code) %>%  summarize(count=n(), cnt.missing=sum(is.na(value)), pct.missing= 100*cnt.missing/count) %>% 
-  arrange(country.code) %>%  select(country.code, pct.missing) %>%  arrange(desc(pct.missing)) %>% print(n=250)
-```
-We save the final data frame `wdi.dfv2` as a `CSV` file and then check the structure.
-```{r}
-wdi.dfv2$country.code = factor(wdi.dfv2$country.code) #refactor
-wdi.dfv2$year = factor(wdi.dfv2$year, ordered=TRUE) #refactor
-write.csv(file=("./data/wdi.df.csv"), x=wdi.dfv2)
-str(wdi.dfv2)
-```
-#VARIABLE SUMMARIES
-Now that we have a clean dataset to work with that contains the data we deem of interest we load it from the file we saved previously and drop the column `index`.
-```{r}
-wdi.df = read_csv("./data/wdi.df.csv")
-drops='X1'
-wdi.df = wdi.df[ , !(names(wdi.df) %in% drops)]
-options(scipen=999) # disable scientific notation. Easiear to read
-```
 
-We select the countries of interest (https://en.wikipedia.org/wiki/BRICSg):
 
-```{r, warning=FALSE}
+We select our 5 countries of interest. And after doing some studying of missing values we select 2 complete decades (1992 -2011) to craft a data frame without missing values:
+
+```{r}
+#select 5 countries of interest (https://en.wikipedia.org/wiki/BRICS) and years 1992/2011 (2 decades/20 years) 
 wdi.df %>% filter(. , country.code %in% c("BRA","CHN","IND","RUS","ZAF")) -> wdi.df
-wdi.df %>% rename(. , )
+wdi.df <- filter(wdi.df, year>1991 & year<2012)
 ```
 
+Now we want to create a data frame where we can perform our queries to the data. We want a data frame with a column per indicator. This is the process:
 
-First, let's check the number of unique values for each of our columns (year, code, country):
+* Drop columns we don't need
+* Refactor columns because we don't have all the values we had before selecting countries and years
+* Transform data frame to have a column per indicator
+* Rename indicators to a more descriptive name easier for the reader
 
 ```{r}
-wdi.df %>% summarise(number_of_unique_years = n_distinct(year))
-wdi.df %>% summarise(number_of_unique_ind = n_distinct(indicator.code))
-wdi.df %>% summarise(number_of_unique_countries = n_distinct(country.code))
+drops=c('country.name','indicator.name') # drop columns we don't need
+wdi.df = wdi.df[ , !(names(wdi.df) %in% drops)]
+wdi.df$country.code = factor(wdi.df$country.code) #refactor
+wdi.df$year = factor(wdi.df$year, ordered=TRUE) #refactor
+wdi.df$indicator.code = factor(wdi.df$indicator.code, ordered=TRUE) #refactor
+wdi.df$value <- as.numeric(wdi.df$value) #column value to numberic
+
+#transform data frame to have a column for each indicator
+wdi.df %>% spread(., indicator.code, value) -> wdi.df
+
+#rename indicator columns for better understanding
+wdi.df %>% rename(. , surface.km2 =AG.SRF.TOTL.K2,
+                  energy.use = EG.USE.PCAP.KG.OE,
+                  co2.emission = EN.ATM.CO2E.PC,
+                  GDP = NY.GDP.MKTP.CD,
+                  GDP.growth = NY.GDP.MKTP.KD.ZG,
+                  pop.0.14 = SP.POP.0014.TO.ZS,
+                  pop.15.64 = SP.POP.1564.TO.ZS,
+                  pop.growth = SP.POP.GROW,
+                  pop.total =  SP.POP.TOTL,
+                  pop.rural=  SP.RUR.TOTL.ZS,
+                  pop.urban =SP.URB.TOTL.IN.ZS 
+) -> wdi.df
 ```
 
-Next, we'll calculate the mean, median, standard deviation, mininum, and maximun of each indicator code. For clarity we'll also add the indicator name:
+Next, we generate a new indicator we think more useful than "surface of country in km2" which is "population density" (`pop.total / surface.km2`). We then remove `surface.km2` from the data frame:
 
 ```{r}
-# get values summary for every indicator (mean, median, min, max, sd)
-options(dplyr.width = Inf)
-wdi.df %>% group_by(indicator.name, indicator.code) %>% summarise(mean=round(mean(value), 2), median=round(median(value), 2), sd=round(sd(value), 2),
-                                                                  max=round(max(value), 2),min=round(min(value), 2))  %>% print(n=)
+#create new indicator POPULATION DENSITY = POPULATION TOTAL/TOTAL COUNTRY SURFACE
+wdi.df %>% mutate(., pop.density = pop.total / surface.km2) -> wdi.df
+wdi.df$surface.km2 <- NULL
 ```
 
-We'll calculate the same statistics for each indicator code as above but this time we'll show the statistics for the first 5 years :
+For each indicator we get the quantiles and store it in a different indicator with the same name and `.q` a the end for future use:
+```{r}
+#get quantiles for all indicators and usen the name of the column + .q
+make.ntiles = function (inputvar, n) { 
+  inputvar %>%
+    quantile(., 
+             (1/n) * 1:(n-1),
+             na.rm=TRUE
+    ) %>%
+    c(-Inf, ., Inf) %>%
+    cut(inputvar, 
+        breaks=., 
+        paste("Q", 1:n, sep="")
+    ) 
+}
+wdi.df %>%  mutate(energy.use.q = make.ntiles(energy.use, 4 ),
+                   co2.emission.q = make.ntiles(co2.emission, 4 ),
+                   GDP.q = make.ntiles(GDP, 4 ),
+                   GDP.growth.q = make.ntiles(GDP.growth, 4 ),
+                   pop.0.14.q = make.ntiles(pop.0.14, 4 ),
+                   pop.15.64.q = make.ntiles(pop.15.64, 4 ),
+                   pop.growth.q = make.ntiles(pop.growth, 4 ),
+                   pop.total.q =  make.ntiles(pop.total, 4 ),
+                   pop.rural.q =  make.ntiles(pop.rural, 4 ),
+                   pop.urban.q = make.ntiles(pop.urban, 4 ), 
+                   pop.density.q = make.ntiles(pop.density, 4)
+                   ) -> wdi.df
+```
+
+Now that we have a clean dataset to work with that contains the data we deem of interest.
+
+#VARIABLE SUMMARIES
+
+First, let's check summary statistics of all the indicators:
 
 ```{r}
-# get values summary for every year/indicator (mean, median, min, max, sd)
-wdi.df %>% group_by(year,indicator.code ) %>% summarise(mean=round(mean(value), 2), median=round(median(value), 2), sd=round(sd(value), 2),
-                                                                  max=round(max(value), 2),min=round(min(value), 2))  -> summary.year.code.df
-for (y in unique(summary.year.code.df$year)[1:5]){summary.year.code.df %>% filter(year == y) %>% print()}
+indicators <- c("energy.use", "co2.emission","GDP", "GDP.growth", "pop.0.14", "pop.15.64",
+                "pop.growth", "pop.total", "pop.rural", "pop.urban", "pop.density")
+summary(wdi.df[indicators])
 ```
 
-And now for every country:
+Next, we'll calculate the mean, median, standard deviation, minimum, and maximum of each indicator code per country:
 
+***Energy use***
 ```{r, warning=FALSE,message=FALSE}
-# get values summary for every country/indicator (mean, median, min, max, sd)
-wdi.df %>% group_by(country.name,indicator.code) %>% summarise(mean=round(mean(value), 2), median=round(median(value), 2), sd=round(sd(value), 2),
-                                                                  max=round(max(value), 2),min=round(min(value), 2)) -> summary.country.code.df 
-for (c in unique(summary.country.code.df$country.name)[1:5]){summary.country.code.df %>% filter(country.name == c) %>% print()}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(energy.use), median=median(energy.use), sd=sd(energy.use), max=max(energy.use),min=min(energy.use))
+```
+***CO2 emisions***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(co2.emission), median=median(co2.emission), sd=sd(co2.emission), max=max(co2.emission),min=min(co2.emission))
+```
+***GDP annual growth***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(GDP.growth), median=median(GDP.growth), sd=sd(GDP.growth), max=max(GDP.growth),min=min(GDP.growth))
+```
+***GDP***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(GDP), median=median(GDP), sd=sd(GDP), max=max(GDP),min=min(GDP))
+```
+***% Population 0 to 14 years old***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.0.14), median=median(pop.0.14), sd=sd(pop.0.14), max=max(pop.0.14),min=min(pop.0.14))
+```
+***% Population 15 to 64 years old***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.15.64), median=median(pop.15.64), sd=sd(pop.15.64), max=max(pop.15.64),min=min(pop.15.64))
+```
+***Population growth***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.growth), median=median(pop.growth), sd=sd(pop.growth), max=max(pop.growth),min=min(pop.growth))
+```
+
+The only country of all 5 with a negative average is Russia.
+
+***Population total***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.total), median=median(pop.total), sd=sd(pop.total), max=max(pop.total),min=min(pop.total))
+```
+***% Rural population***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.rural), median=median(pop.rural), sd=sd(pop.rural), max=max(pop.rural),min=min(pop.rural))
+```
+
+By observing min and max values we can see how China has the biggest change on rural population which matches the numbers of urban population below. Many Chinese people moved from rural areas to urban areas.
+
+***% Urban population***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.urban), median=median(pop.urban), sd=sd(pop.urban), max=max(pop.urban),min=min(pop.urban))
+```
+***Population density***
+```{r}
+wdi.df %>% group_by(country.code) %>% summarise(avg=mean(pop.density), median=median(pop.density), sd=sd(pop.density), max=max(pop.density),min=min(pop.density))
+```
+
+India, followed by China, are the countries big highest population density.
+
+
+Now we do the same but for every year instead:
+
+
+***Energy use***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(energy.use), median=median(energy.use), sd=sd(energy.use), max=max(energy.use),min=min(energy.use))
+```
+
+As expected, being the countries emerging powers, the energy use has an upward trend through the years.
+
+***CO2 emisions***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(co2.emission), median=median(co2.emission), sd=sd(co2.emission), max=max(co2.emission),min=min(co2.emission))
+```
+
+The average of CO2 emissions has remained approximately constant during the 2 decades under study.
+
+***GDP annual growth***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(GDP.growth), median=median(GDP.growth), sd=sd(GDP.growth), max=max(GDP.growth),min=min(GDP.growth))
+```
+***GDP***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(GDP), median=median(GDP), sd=sd(GDP), max=max(GDP),min=min(GDP))
+```
+***% Population 0 to 14 years old***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.0.14), median=median(pop.0.14), sd=sd(pop.0.14), max=max(pop.0.14),min=min(pop.0.14))
+```
+***% Population 15 to 64 years old***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.15.64), median=median(pop.15.64), sd=sd(pop.15.64), max=max(pop.15.64),min=min(pop.15.64))
+```
+***Population growth***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.growth), median=median(pop.growth), sd=sd(pop.growth), max=max(pop.growth),min=min(pop.growth))
+```
+***Population total***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.total), median=median(pop.total), sd=sd(pop.total), max=max(pop.total),min=min(pop.total))
+```
+***% Rural population***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.rural), median=median(pop.rural), sd=sd(pop.rural), max=max(pop.rural),min=min(pop.rural))
+```
+***% Urban population***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.urban), median=median(pop.urban), sd=sd(pop.urban), max=max(pop.urban),min=min(pop.urban))
+```
+***Population density***
+```{r}
+wdi.df %>% group_by(year) %>% summarise(avg=mean(pop.density), median=median(pop.density), sd=sd(pop.density), max=max(pop.density),min=min(pop.density))
 ```
 
 
 ##References
 [1] Investopedia, http://www.investopedia.com/articles/03/042303.asp<br>
 [2] Population Reference Bureau, http://www.prb.org/Publications/Articles/2002/HowManyPeopleHaveEverLivedonEarth.aspx
+[3] BRICS (Wikipedia), https://en.wikipedia.org/wiki/BRICS
 
